--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "description": "A simple physics model of laser-induced fluorescence process",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "node src/server.js"
   },
   "author": "Jan Vorac",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "@types/d3": "^5.7.2",
+    "d3": "^5.15.0"
+  }
 }
