--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Jan Vorac",
   "license": "MIT",
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "typescript": "^3.8.3"
   },
   "dependencies": {
